# a10y-healthcheck-reporter-otel

./: .env  .env.non-secret  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-debug.yml  docker-compose.yml
examples/: test_service.rs
src/: config.rs  main.rs  otel.rs  sweep.rs  trace_layer.rs
