[package]
name = "a10y-healthcheck-reporter-otel"
version = "0.1.0"
edition = "2021"
authors = ["David Pitoniak <pitoniak32>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pitoniak32/a10y-healthcheck-reporter-otel"
description = """
A Service that performs a10y healthchecks and emits telemetry data in the OTLP (Open Telemetry Protocol) format
"""
categories = ["a10y", "healthchecks"]
keywords = ["a10y", "opentelemetry", "metrics", "otlp"]

[[bin]]
name = "a10y-reporter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }

axum = "0.7.7"
serde = { version = "1.0.210", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tokio = { version = "1.40.0", features = ["full"] }

tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.28.0"

opentelemetry = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["metrics"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
hyper = "1.4.1"
serde_json = "1.0.128"
dotenv = "0.15.0"
once_cell = "1.20.2"
